2017-10-04  Bob Weiner  <rsw@gnu.org>

* man/hyperbole.texi (Version): Updated to 6.0.2c and rebuilt output formats.

* hmouse-sh.el (hmouse-bind-key): Renamed to hmouse-bind-key-emacs since is emacs-only.
               (hmouse-bind-shifted-key): Renamed to hmouse-bind-shifted-key-emacs.

2017-10-03  Bob Weiner  <rsw@gnu.org>

* hui-window.el (hmouse-alist): In hmouse-drag-horizontally test, removed check of
   (not (hmouse-drag-between-windows)) since was tested earlier in hmouse-alist.
                (hmouse-resize-window-side, hmouse-release-left-edge,
                 hmouse-swap-buffers, hmouse-swap-windows,
                 hmouse-modeline-resize-window, hmouse-release-right-edge,
                 hmouse-modeline-click, hmouse-modeline-release): Removed optional
    assist-flag arg; used assist-flag free variable instead.

* hmouse-tag.el (smart-tags-display): Fixed to include tags-table found in any
    ancestor directory of current directory when tags-table-list already
    contains items.

* hpath.el (hpath:find-program): Changed so Hyperbole external and internal
    file suffix lists are consulted before using standard directory or
    image display methods.  So for example, Emacs.app on macOS, which is actually
    a directory, can be displayed/run externally.
           (hpath:external-display-alist-macos): Added .app suffix.

* hui-jmenu.el (hui-menu-buffer-mode-name): mode-name might not be a string; pass it through
    format-mode-line to ensure it is a string.  Without this, hui-menu-of-buffers could
    trigger an error on some buffers.

2017-10-02  Bob Weiner  <rsw@gnu.org>

* hui-window.el (hmouse-pulse-flag): Added to allow disabling visual pulsing in Action Mouse
    Key buffer/file window placement.  Used in hmouse-pulse-buffer and hmsoue-pulse-line.

* hload-path.el (stringp): Forced use of hyperb:dir truename (after resolving pathname links).

* hbdata.el (hbdata:build): Modified to ensure that but-sym or hbut:current (if but-sym is nil)