@@ -1,5 +1,7 @@
 			  ABOUT GNU HYPERBOLE
+
 		   Designed and Written by Bob Weiner
+ 	        Maintained by Mats Lidell and Bob Weiner
 	         https://www.gnu.org/software/hyperbole/
                             Version 6.0.2c
 
